# bdcs

./: .dockerignore  .gitignore  .hlint.yaml  .travis.yml  ChangeLog.md  DEVELOPMENT.md  Dockerfile  Dockerfile.build  Dockerfile.integration-test  Makefile  README  README.inspect.md  README.md  Setup.hs  bdcs.cabal  cabal.config  entrypoint-integration-test.sh  entrypoint.sh  kick_dependent_tests.sh  primary-xml-gz  queries  rpm.cabal  rpm2json.hs  s3reposync.sh  schema.sql  unrpm.hs
.jenkins/: configure-pre-release-dependencies
RPM/: Parse.hs  Tags.hs  Types.hs
RPM/Internal/: Numbers.hs
db-test/: DB.hs  FileType.hs  Main.hs  README  ReqType.hs  db.cabal  depclose.hs  import.hs
db-test/BDCS/: Builds.hs  DB.hs  Exceptions.hs  FileType.hs  Files.hs  Groups.hs  KeyValue.hs  Packages.hs  Projects.hs  ReqType.hs  Signatures.hs  Sources.hs
db-test/BDCS/RPM/: Groups.hs  Projects.hs  Signatures.hs  Sources.hs
db-test/Import/: Comps.hs  Conduit.hs  RPM.hs  Repodata.hs
examples/recipes/: atlas.toml  http-server.toml
haskell-rpm/: inspect.hs  rpm.cabal  unrpm.hs
haskell-rpm/RPM/: Parse.hs  Tags.hs  Types.hs  Version.hs
haskell-rpm/RPM/Internal/: Numbers.hs
importer/: .gitignore  .hlint.yaml  README.inspect  Setup.hs  bdcs.cabal  db.cabal  depclose.hs  export.hs  import.hs
importer/BDCS/: Builds.hs  CS.hs  DB.hs  Depclose.hs  Depsolve.hs  Exceptions.hs  Files.hs  GroupKeyValue.hs  Groups.hs  KeyType.hs  KeyValue.hs  Packages.hs  Projects.hs  ReqType.hs  Requirements.hs  Scripts.hs  Sources.hs  Version.hs
importer/BDCS/Label/: Docs.hs  FileLabels.hs  InfoPage.hs  Library.hs  License.hs  ManPage.hs  Service.hs  Translation.hs  Types.hs  Utils.hs
importer/BDCS/NPM/: SemVer.hs
importer/BDCS/RPM/: Builds.hs  Files.hs  Groups.hs  Projects.hs  Requirements.hs  Scripts.hs  Signatures.hs  Sources.hs  Utils.hs
importer/Export/: Directory.hs  Ostree.hs  Qcow2.hs  Tar.hs  TmpFiles.hs  Utils.hs
importer/Import/: Comps.hs  Conduit.hs  NPM.hs  RPM.hs  Repodata.hs  State.hs  URI.hs
importer/Utils/: Conduit.hs  Either.hs  Error.hs  Monad.hs
importer/data/: tmpfiles-default.conf
importer/tests/: Main.hs  README.md  Utils.hs  requirements.txt  test_depclose.py  test_depclose.sh  test_depsolve.sh  test_export.sh  test_import.sh  test_tmpfiles.sh
importer/tests/BDCS/: DepcloseSpec.hs  GroupsSpec.hs
importer/tests/BDCS/NPM/: SemVerSpec.hs
importer/tests/BDCS/RPM/: BuildSpec.hs  ProjectsSpec.hs  SignaturesSpec.hs  SourcesSpec.hs
importer/tests/BDCS/RPM/Builds/: Tests.hs
importer/tests/BDCS/RPM/Projects/: Tests.hs
importer/tests/BDCS/RPM/Signatures/: Tests.hs
importer/tests/BDCS/RPM/Sources/: Tests.hs
importer/tests/Export/: TmpFilesSpec.hs
importer/tools/: bdcs-tmpfiles.hs  depclose.hs  depsolve.hs  export.hs  import.hs  inspect.hs  migratedb.hs
importer/tools/inspect/: inspect.hs
importer/tools/inspect/Commands/: Groups.hs  Ls.hs  Nevras.hs
importer/tools/inspect/Utils/: Exceptions.hs  GetOpt.hs
src/: Makefile  README.inspect  bdcs.cabal
src/BDCS/: Builds.hs  CS.hs  DB.hs  Depclose.hs  Depsolve.hs  Exceptions.hs  Export.hs  Files.hs  GroupKeyValue.hs  Groups.hs  KeyType.hs  KeyValue.hs  Packages.hs  Projects.hs  ReqType.hs  Requirements.hs  Scripts.hs  Signatures.hs  Sources.hs  Version.hs
src/BDCS/Export/: Customize.hs  Directory.hs  FSTree.hs  Ostree.hs  Qcow2.hs  Tar.hs  TmpFiles.hs  Types.hs  Utils.hs
src/BDCS/Import/: Comps.hs  Conduit.hs  NPM.hs  RPM.hs  Repodata.hs  State.hs  URI.hs
src/BDCS/Label/: Docs.hs  FileLabels.hs  Fonts.hs  InfoPage.hs  Library.hs  License.hs  ManPage.hs  Service.hs  Translation.hs  Types.hs  Utils.hs
src/BDCS/NPM/: SemVer.hs
src/BDCS/RPM/: Builds.hs  Files.hs  Groups.hs  Projects.hs  Requirements.hs  Scripts.hs  Signatures.hs  Sources.hs  Utils.hs
src/BDCS/Utils/: Conduit.hs  Either.hs  Error.hs  Filesystem.hs  Mode.hs  Monad.hs  Process.hs
src/Export/: Directory.hs  Ostree.hs  Qcow2.hs  Utils.hs
src/Import/: Comps.hs  Conduit.hs  NPM.hs  RPM.hs  Repodata.hs  URI.hs
src/Utils/: Conduit.hs  Either.hs  Filesystem.hs  Mode.hs  Monad.hs
src/data/: nsswitch-altfiles.conf  sysusers-default.conf
src/tests/: Utils.hs  test_depsolve.sh  test_export.sh  test_import.sh
src/tests/BDCS/: DepcloseSpec.hs  DepsolveSpec.hs  GroupsSpec.hs
src/tests/BDCS/Export/: FSTreeSpec.hs  TmpFilesSpec.hs
src/tests/BDCS/NPM/: SemVerSpec.hs
src/tests/BDCS/RPM/: ProjectsSpec.hs  UtilsSpec.hs
src/tools/: bdcs-tmpfiles.hs  bdcs.hs  depsolve.hs  export.hs  import.hs
src/tools/Utils/: GetOpt.hs  Subcommands.hs
src/tools/inspect/: inspect.hs
src/tools/inspect/Commands/: Groups.hs  Ls.hs  Nevras.hs
src/tools/inspect/Utils/: Exceptions.hs  IO.hs  KeyVal.hs
src/tools/inspect/subcommands/: groups.hs  ls.hs  nevras.hs
tests/: Main.hs  is_import_busted.py  test_depsolve.sh  test_export.sh  test_import.sh  test_tmpfiles.sh
tests/RPM/Version/: Tests.hs
