name:                db
version:             0.1.0.0
author:              Chris Lumens
maintainer:          clumens@redhat.com
build-type:          Simple
cabal-version:       >=1.10
license:             LGPL
license-file:        ../LICENSE

library
  exposed-modules:     BDCS.Builds,
                       BDCS.DB,
                       BDCS.Exceptions,
                       BDCS.Files,
                       BDCS.FileType,
                       BDCS.Groups,
                       BDCS.KeyValue,
                       BDCS.Packages,
                       BDCS.Projects,
                       BDCS.ReqType,
                       BDCS.Signatures,
                       BDCS.Sources

  build-depends:       base >=4.8 && <4.9,
                       bytestring,
                       directory,
                       esqueleto,
                       filepath,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       rpm,
                       text,
                       time,
                       transformers
  default-language:    Haskell2010

executable import
  main-is:             import.hs

  build-depends:       attoparsec >= 0.12.1.4,
                       attoparsec-binary,
                       base >= 4.7 && < 4.9,
                       bytestring >= 0.10 && < 0.11,
                       cond,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       db,
                       directory,
                       esqueleto,
                       filepath,
                       mtl >= 2.2.1,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       pretty >= 1.1.2.0,
                       rpm,
                       text,
                       time,
                       transformers,
                       unix

  default-language:    Haskell2010

  ghc-options:         -Wall
