name:                   bdcs
version:                0.1.0
synopsis:               Tools for managing a content store of software packages
description:            This module provides a library and various tools for managing a content store and
                        metadata database.  These store the contents of software packages that make up a
                        Linux distribution as well as a lot of metadata about those software packages.
                        Tools are inclued to construct those stores from pre-built software and to pull
                        files back out to turn into bootable images.
homepage:               https://github.com/weldr/bdcs
category:               Distribution
author:                 Chris Lumens
maintainer:             clumens@redhat.com
license:                LGPL
license-file:           LICENSE
cabal-version:          >= 1.10
build-type:             Custom

data-dir:               data
data-files:             sysusers-default.conf,
                        tmpfiles-default.conf,
                        tmpfiles-ostree.conf,
                        nsswitch-altfiles.conf

extra-source-files:     Makefile,
                        cabal.config,
                        tests/*.hs,
                        tests/*.sh,
                        tests/BDCS/*.hs,
                        tests/BDCS/RPM/*.hs,
                        tests/Export/*.hs

custom-setup
    setup-depends:      base,
                        Cabal,
                        filepath

source-repository       head
    type:               git
    location:           https://github.com/weldr/bdcs

flag scripts
    description:        Enable importing package scripts to the database
    default:            False

library
    exposed-modules:    BDCS.Builds,
                        BDCS.CS,
                        BDCS.DB,
                        BDCS.Depclose,
                        BDCS.Depsolve,
                        BDCS.Exceptions,
                        BDCS.Files,
                        BDCS.GroupKeyValue,
                        BDCS.Groups,
                        BDCS.KeyType,
                        BDCS.KeyValue,
                        BDCS.Label.Docs,
                        BDCS.Label.FileLabels,
                        BDCS.Label.Library,
                        BDCS.Label.Service,
                        BDCS.Label.Types,
                        BDCS.Label.Utils,
                        BDCS.Packages,
                        BDCS.Projects,
                        BDCS.ReqType,
                        BDCS.Requirements,
                        BDCS.Scripts,
                        BDCS.Signatures,
                        BDCS.Sources,
                        BDCS.RPM.Builds,
                        BDCS.RPM.Files,
                        BDCS.RPM.Groups,
                        BDCS.RPM.Projects,
                        BDCS.RPM.Requirements,
                        BDCS.RPM.Scripts,
                        BDCS.RPM.Signatures,
                        BDCS.RPM.Sources,
                        BDCS.RPM.Utils,
                        BDCS.Version,
                        Export.Directory,
                        Export.Qcow2,
                        Export.Ostree,
                        Export.Tar,
                        Export.TmpFiles,
                        Export.Utils,
                        Import.Comps,
                        Import.Conduit,
                        Import.RPM,
                        Import.Repodata,
                        Import.State,
                        Import.URI,
                        Utils.Conduit,
                        Utils.Either,
                        Utils.Error,
                        Utils.Mode,
                        Utils.Monad

    build-depends:      aeson,
                        base >=4.9 && <5.0,
                        bytestring,
                        codec-rpm >= 0.1.3 && < 0.2,
                        cond,
                        containers,
                        conduit >= 1.2.8,
                        conduit-combinators,
                        conduit-extra,
                        cpu,
                        cryptonite,
                        directory,
                        esqueleto >= 2.5.3,
                        exceptions,
                        filepath,
                        gi-gio,
                        gi-glib,
                        gi-ostree >= 1.0.3,
                        gitrev >= 1.3.1,
                        haskell-gi-base,
                        http-conduit,
                        mtl >= 2.2.1,
                        network-uri,
                        parsec,
                        parsec-numbers,
                        persistent,
                        persistent-sqlite,
                        persistent-template,
                        process,
                        resourcet,
                        split,
                        tar,
                        temporary,
                        text,
                        time,
                        unix,
                        xml-conduit

    pkgconfig-depends:  ostree-1 >= 2017.8

    other-modules:      Paths_bdcs
    default-language:   Haskell2010

    if flag(scripts)
        cpp-options:    -DSCRIPTS
        cc-options:     "-DSCRIPTS"
        ghc-options:    -Wall
    else
        ghc-options:    -Wall

executable import
    main-is:            import.hs
    hs-source-dirs:     tools

    build-depends:      bdcs,
                        base >= 4.7 && < 5.0,
                        cond,
                        directory,
                        mtl >= 2.2.1,
                        network-uri

    default-language:   Haskell2010

    ghc-options:        -Wall

executable inspect
    main-is:            inspect.hs
    hs-source-dirs:     tools/inspect

    other-modules:      Commands.Groups,
                        Commands.Ls,
                        Commands.Nevras,
                        Utils.GetOpt,
                        Utils.IO

    build-depends:      bdcs,
                        base >= 4.7 && < 5.0,
                        cond,
                        directory,
                        filepath,
                        process

    default-language:   Haskell2010

    ghc-options:        -Wall

executable inspect-groups
    main-is:            Groups.hs
    hs-source-dirs:     tools/inspect/Commands,
                        tools/inspect

    other-modules:      Utils.GetOpt,
                        Utils.IO

    build-depends:      aeson,
                        aeson-pretty,
                        base >= 4.7 && < 5.0,
                        bdcs,
                        bytestring,
                        cond,
                        conduit >= 1.2.8,
                        containers,
                        directory,
                        persistent-sqlite,
                        regex-pcre,
                        text

    default-language:   Haskell2010
    ghc-options:        -Wall

executable inspect-ls
    main-is:            Ls.hs
    hs-source-dirs:     tools/inspect/Commands,
                        tools/inspect

    other-modules:      Utils.GetOpt,
                        Utils.IO

    build-depends:      aeson,
                        aeson-pretty,
                        base >= 4.7 && < 5.0,
                        bdcs,
                        bytestring,
                        cond,
                        conduit >= 1.2.8,
                        containers,
                        directory,
                        gi-ostree,
                        mtl >= 2.2.1,
                        persistent-sqlite,
                        regex-pcre,
                        text,
                        time

    default-language:   Haskell2010
    ghc-options:        -Wall

executable inspect-nevras
    main-is:            Nevras.hs
    hs-source-dirs:     tools/inspect/Commands,
                        tools/inspect

    other-modules:      Utils.GetOpt,
                        Utils.IO

    build-depends:      bdcs,
                        base >= 4.7 && < 5.0,
                        cond,
                        conduit >= 1.2.8,
                        directory,
                        persistent-sqlite,
                        regex-pcre,
                        text

    default-language:   Haskell2010
    ghc-options:        -Wall

executable export
    main-is:            export.hs
    hs-source-dirs:     tools

    build-depends:      bdcs,
                        base >= 4.9 && < 5.0,
                        cond,
                        conduit >= 1.2.8,
                        directory,
                        mtl >= 2.2.1,
                        persistent-sqlite,
                        text

    default-language:   Haskell2010

    ghc-options:        -Wall

executable bdcs-tmpfiles
    main-is:            bdcs-tmpfiles.hs
    hs-source-dirs:     tools

    build-depends:      bdcs,
                        base >= 4.9 && < 5.0,
                        directory

    default-language:   Haskell2010

    ghc-options:        -Wall

executable depsolve
    main-is:            depsolve.hs
    hs-source-dirs:     tools

    build-depends:      bdcs,
                        base >= 4.9 && < 5.0,
                        mtl >= 2.2.1,
                        persistent-sqlite,
                        text

    default-language:   Haskell2010

    ghc-options:        -Wall

Test-Suite test-bdcs
    type:               exitcode-stdio-1.0
    hs-source-dirs:     ., tests
    main-is:            Spec.hs

    build-depends:      hspec,
                        aeson,
                        base >= 4.8 && < 5.0,
                        bytestring,
                        codec-rpm >= 0.1.3 && < 0.2,
                        cond,
                        conduit >= 1.2.8,
                        containers,
                        directory,
                        esqueleto >= 2.5.3,
                        filepath,
                        gi-gio,
                        gi-glib,
                        monad-logger,
                        mtl >= 2.2.1,
                        parsec,
                        parsec-numbers,
                        persistent,
                        persistent-sqlite,
                        persistent-template,
                        resourcet,
                        text,
                        time,
                        unix

    ghc-options:        -Wall
    cpp-options:        -DTEST

    default-language:   Haskell2010
