name:                db
version:             0.1.0.0
author:              Chris Lumens
maintainer:          clumens@redhat.com
build-type:          Simple
cabal-version:       >=1.10
license:             LGPL
license-file:        LICENSE

flag debug
  description:       Enable debugging spew
  default:           False

library
  exposed-modules:     BDCS.Builds,
                       BDCS.CS,
                       BDCS.DB,
                       BDCS.Depsolve,
                       BDCS.Exceptions,
                       BDCS.Files,
                       BDCS.Groups,
                       BDCS.KeyValue,
                       BDCS.Packages,
                       BDCS.Projects,
                       BDCS.ReqType,
                       BDCS.Signatures,
                       BDCS.Sources,
                       BDCS.RPM.Builds,
                       BDCS.RPM.Files,
                       BDCS.RPM.Groups,
                       BDCS.RPM.Projects,
                       BDCS.RPM.Signatures,
                       BDCS.RPM.Sources,
                       Import.Comps,
                       Import.Conduit,
                       Import.RPM,
                       Import.Repodata,
                       Import.State,
                       Import.URI

  build-depends:       base >=4.9 && <5.0,
                       bytestring,
                       cond,
                       containers,
                       conduit >= 1.2.8,
                       conduit-combinators,
                       conduit-extra,
                       cpio-conduit,
                       cpu,
                       directory,
                       esqueleto,
                       filepath,
                       gi-gio,
                       gi-glib,
                       gi-ostree,
                       haskell-gi-base,
                       http-conduit,
                       lzma-conduit,
                       mtl >= 2.2.1,
                       network-uri,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       resourcet,
                       rpm >= 1,
                       temporary,
                       text,
                       time,
                       transformers,
                       xml-conduit
  default-language:    Haskell2010

executable import
  main-is:             import.hs

  build-depends:       attoparsec >= 0.12.1.4,
                       attoparsec-binary,
                       base >= 4.7 && < 5.0,
                       bytestring >= 0.10 && < 0.11,
                       cond,
                       conduit >= 1.2.8,
                       conduit-combinators,
                       conduit-extra,
                       cpio-conduit,
                       cpu,
                       db,
                       directory,
                       esqueleto,
                       filepath,
                       gi-gio,
                       gi-glib,
                       gi-ostree,
                       haskell-gi-base,
                       http-conduit,
                       lzma-conduit,
                       mtl >= 2.2.1,
                       network-uri,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       pretty >= 1.1.2.0,
                       resourcet,
                       rpm >= 1,
                       temporary,
                       text,
                       time,
                       transformers,
                       unix,
                       xml-conduit

  default-language:    Haskell2010

  ghc-options:         -Wall

executable export
  main-is:             export.hs

  build-depends:       base >= 4.9 && < 5.0,
                       bytestring >= 0.10 && < 0.11,
                       cond,
                       conduit >= 1.2.8,
                       conduit-extra,
                       cpu,
                       directory,
                       esqueleto,
                       filepath,
                       gi-gio,
                       gi-glib,
                       gi-ostree,
                       haskell-gi-base,
                       mtl >= 2.2.1,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       resourcet,
                       temporary,
                       text,
                       time,
                       unix

  default-language:    Haskell2010

  ghc-options:         -Wall

executable depclose
  main-is:             depclose.hs

  build-depends:       attoparsec >=0.12.1.4,
                       attoparsec-binary,
                       base >= 4.7 && < 5.0,
                       bytestring,
                       cond,
                       conduit >= 1.2.8,
                       conduit-extra,
                       containers,
                       db,
                       directory,
                       esqueleto,
                       filepath,
                       persistent,
                       persistent-sqlite,
                       persistent-template,
                       resourcet,
                       rpm >= 1,
                       text,
                       time,
                       transformers

  default-language:    Haskell2010

  if flag(debug)
    cpp-options:       -Wall -DDEBUG
    cc-options:        "-DDEBUG"
  else
    cpp-options:       -Wall

Test-Suite test-db
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  build-depends:       HUnit,
                       base >= 4.8 && < 5.0,
                       persistent,
                       persistent-sqlite,
                       tasty,
                       tasty-hunit,
                       db,
                       rpm >= 1
  default-language:    Haskell2010
