name:                db
version:             0.1.0.0
author:              Chris Lumens
maintainer:          clumens@redhat.com
build-type:          Simple
cabal-version:       >=1.10
license:             LGPL
license-file:        LICENSE

flag debug
  description:       Enable debugging spew
  default:           False

flag scripts
  description:       Enable importing package scripts to the database
  default:           False

library
  exposed-modules:     BDCS.Builds,
                       BDCS.CS,
                       BDCS.DB,
                       BDCS.Depsolve,
                       BDCS.Exceptions,
                       BDCS.Files,
                       BDCS.GroupKeyValue,
                       BDCS.Groups,
                       BDCS.KeyType,
                       BDCS.KeyValue,
                       BDCS.Label.Docs,
                       BDCS.Label.FileLabels,
                       BDCS.Label.Library,
                       BDCS.Label.Types,
                       BDCS.Label.Utils,
                       BDCS.Packages,
                       BDCS.Projects,
                       BDCS.ReqType,
                       BDCS.Requirements,
                       BDCS.Scripts,
                       BDCS.Signatures,
                       BDCS.Sources,
                       BDCS.RPM.Builds,
                       BDCS.RPM.Files,
                       BDCS.RPM.Groups,
                       BDCS.RPM.Projects,
                       BDCS.RPM.Requirements,
                       BDCS.RPM.Scripts,
                       BDCS.RPM.Signatures,
                       BDCS.RPM.Sources,
                       BDCS.RPM.Utils,
                       BDCS.Version,
                       Import.Comps,
                       Import.Conduit,
                       Import.RPM,
                       Import.Repodata,
                       Import.State,
                       Import.URI,
                       Utils.Either,
                       Utils.Monad

  build-depends:       base >=4.9 && <5.0,
                       bytestring,
                       cond,
                       containers,
                       conduit >= 1.2.8,
                       conduit-combinators,
                       conduit-extra,
                       cpu,
                       directory,
                       esqueleto >= 2.5.3,
                       filepath,
                       gi-gio,
                       gi-ostree >= 1.0.3,
                       gitrev,
                       haskell-gi-base,
                       http-conduit,
                       mtl >= 2.2.1,
                       network-uri,
                       persistent-sqlite,
                       persistent-template,
                       resourcet,
                       rpm >= 1,
                       temporary,
                       text,
                       time,
                       xml-conduit
  other-modules:       Paths_db
  default-language:    Haskell2010

  if flag(scripts)
    cpp-options:       -Wall -DSCRIPTS
    cc-options:        "-DSCRIPTS"
  else
    cpp-options:       -Wall

executable import
  main-is:             import.hs
  hs-source-dirs:      tools

  build-depends:       db,
                       base >= 4.7 && < 5.0,
                       cond,
                       directory,
                       mtl >= 2.2.1,
                       network-uri

  default-language:    Haskell2010

  ghc-options:         -Wall

executable export
  main-is:             export.hs
  hs-source-dirs:      tools

  build-depends:       db,
                       base >= 4.9 && < 5.0,
                       bytestring >= 0.10 && < 0.11,
                       cond,
                       conduit >= 1.2.8,
                       conduit-extra,
                       containers,
                       directory,
                       filepath,
                       gi-gio,
                       gi-glib,
                       gi-ostree,
                       mtl >= 2.2.1,
                       persistent,
                       persistent-sqlite,
                       resourcet,
                       tar,
                       text,
                       time,
                       unix

  default-language:    Haskell2010

  ghc-options:         -Wall

executable depclose
  main-is:             depclose.hs
  hs-source-dirs:      tools

  build-depends:       db,
                       base >= 4.7 && < 5.0,
                       cond,
                       containers,
                       esqueleto,
                       persistent-sqlite,
                       text

  default-language:    Haskell2010

  if flag(debug)
    cpp-options:       -Wall -DDEBUG
    cc-options:        "-DDEBUG"
  else
    cpp-options:       -Wall

Test-Suite test-db
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs

  build-depends:       hspec,
                       base >= 4.8 && < 5.0,
                       persistent,
                       db,
                       rpm >= 1

  default-language:    Haskell2010
